add name column for feedback, and fix the swagger documentation
